# pyright-strict-runner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
pyright_strict_runner/: __main__.py  main.py  project_types.py
src/: main.py
tests/: test_main.py
tests/examples/: bad.py  bad_any_annotation.py  bad_any_comment.py  bad_pyright_ignore.py  bad_type_ignore.py  good.py  printer.py  warning.py
