[tool.poetry]
name = "pyright-strict-runner"
version = "0.1.0"
description = "Command-line executable for enforcing strict mode checking of Pyright"
authors = ["Juan Felipe Coronel <juanfelipe.coronel@gmail.com>"]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
