[tool.poetry]
name = "pyright_strict_runner"
version = "0.1.0"
description = "Command-line executable for enforcing strict mode checking of Pyright"
authors = ["Juan Felipe Coronel <juanfelipe.coronel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
